[gd_scene load_steps=6 format=3 uid="uid://djl2wmlw7ruj4"]

[ext_resource type="Texture2D" uid="uid://bhe4jj7f3yd5l" path="res://Assets/mountain.png" id="1_jjsc2"]
[ext_resource type="Script" path="res://Scripts/CharacterSelect.gd" id="1_q0cdk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xsxcf"]
bg_color = Color(0.741176, 0.686275, 0.470588, 1)

[sub_resource type="LabelSettings" id="LabelSettings_eh6hb"]
font_size = 80

[sub_resource type="LabelSettings" id="LabelSettings_l12s4"]
font_size = 30

[node name="CharacterSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q0cdk")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_jjsc2")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(1400, 800)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xsxcf")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 205.0
grow_horizontal = 2
text = "Character Select"
label_settings = SubResource("LabelSettings_eh6hb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
custom_minimum_size = Vector2(1000, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Select Your Character Player 1"
label_settings = SubResource("LabelSettings_l12s4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Poseidon" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
text = "Pusseidon"

[node name="Hades" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
text = "Hades"

[node name="Isis" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
text = "Isis"

[node name="Odin" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
text = "Odin"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("..")

[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/Poseidon" to="." method="_on_poseidon_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/Hades" to="." method="_on_hades_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/Isis" to="." method="_on_isis_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/Odin" to="." method="_on_odin_pressed"]
